--- a/accounts/templates/accounts/footer1.html
+++ b/accounts/templates/accounts/footer1.html
@@ -19,9 +19,9 @@
               <!-- <h6 class="text-uppercase mb-4 font-weight-bold" style="color:#fff; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
                 image source
               </h6> -->
-              <img src={% static 'images/lo1.png' %}  height="90px" width="200px">
+              <img src={% static 'images/lo1.png' %}  height="72px" width="200px">
               <p>
-                For users to fill in the child data users should be having marriage certificate, and for user to register for their marriage, both husband and wife should be resgisted to our system.
+                Its allows our user to add their data to our system and go digital.
               </p>
             </div >
             <!-- Grid column -->
@@ -67,9 +67,9 @@
             <!-- Grid column -->
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold" style="color:#fff; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Contact</h6>
-              <p><i class="fas fa-envelope mr-3" style="padding-right: 5px;"></i>jurmeygewog123@gmail.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 975 17708849</p>
-              <p><i class="fas fa-print mr-3"></i> + 725 17770886</p>
+              <p><i class="fas fa-envelope mr-3" style="padding-right: 5px;"></i>  jurmeygewog123@gmail.com</p>
+              <p><i class="fas fa-phone mr-3"></i>   +975 17708849</p>
+              <p><i class="fas fa-print mr-3"></i>   +725 17770886</p>
             </div>
             <!-- Grid column -->
           </div>
