--- a/accounts/templates/accounts/main2.html
+++ b/accounts/templates/accounts/main2.html
@@ -7,7 +7,7 @@
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<meta content="" name="keywords">
 		<meta content="" name="description">
-	
+		<link href={% static 'css/img/favicon.ico' %} rel="icon">
 		  <!-- search bar link -->
 		  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 		  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
